--- a/Python/Cryptography/Homework/Assignment1/.project
+++ b/Python/Cryptography/Homework/Assignment1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CryptoProgram2</name>
+	<name>Problem2</name>
 	<comment></comment>
 	<projects>
 	</projects>
